@@ -1,3 +1,13 @@
+2006-06-24 [paul]	2.3.1cvs17
+
+	* src/compose.c
+	* src/prefs_common.c
+	* src/prefs_common.h
+	* src/prefs_compose_writing.c
+		enable setting of default action when
+		dnd'ing files in the compose window.
+		(Collaborative effort with wwp)
+
 2006-06-23 [wwp]	2.3.1cvs16
 
 	* src/compose.c
